BMTP-545 - Landing page.UI issue (Browser Edge) - fix bug with non-center <h1>, non-visible change language menu item when scroll down

--- a/source/section/hero.scss
+++ b/source/section/hero.scss
@@ -16,7 +16,6 @@ $block-name: "bmtp-hero";
     justify-content: space-between;
   }
   &__artwork {
-    max-width: 70%;
     margin: 0 auto;
     &__img:not(amp-img) {
       display: block;
