--- a/source/section/section.scss
+++ b/source/section/section.scss
@@ -26,8 +26,6 @@ $block-name: "bmtp-section";
   &__header {
     font-size: 32px;
     margin: 40px;
-    width: 100%;
-    max-width: calc(100% - 80px);
     &__img {
       margin: 0 20px;
     }
@@ -135,10 +133,10 @@ $block-name: "bmtp-section";
       p {
       }
     }
-
-    &__header {
-      display: flex;
-    }
+    //
+    //&__header {
+    //  display: flex;
+    //}
   }
 }
 
